Fix the location of the nav menu on mobile devices (small screens) + Add the nav menu on large screens as well.

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ from 0px up to 426px
 .hero {
   height: 538px;
   background-image: linear-gradient(rgba(6, 41, 70, 0.5), rgba(6, 41, 70, 0.5)),
-    url(./images/jesus-kiteque-wn-KYaHwcis-unsplash.jpg);
+    url(../images/jesus-kiteque-wn-KYaHwcis-unsplash.jpg);
   background-clip: border-box;
   background-position: center;
   background-size: cover;
@@ -70,6 +70,72 @@ from 0px up to 426px
   font-size: 1.5rem;
   text-decoration: none;
   font-weight: bold;
+}
+
+.hamburger {
+  /* position: absolute;
+  bottom: 0;
+  left: 1rem; */
+  padding: 8px 0 0 8px;
+}
+
+/* .navigation { */
+.navbar--mobile {
+  position: relative;
+  top: 1.2rem;
+  left: 1rem;
+  background: #062844e0;
+  min-width: 14rem;
+  max-width: 40%;
+  border-radius: 5px;
+}
+
+.navbar--mobile--hidden {
+  background: none;
+}
+
+.navbar--large {
+  display: none;
+}
+
+.navbar--lg__item {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1rem;
+  color: var(--body--text);
+  text-decoration: none;
+
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.navbar__menu--mobile {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 2rem 0 2rem;
+}
+
+.navbar__menu--mobile-hidden {
+  visibility: hidden;
+}
+
+.navbar__item {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 20px;
+  color: var(--body--text);
+  text-decoration: none;
+  display: flex;
+  gap: 8px;
+  align-items: flex-start;
+  cursor: pointer;
+}
+
+.navbar__item:not(:last-child) {
+  padding: 1rem 0;
+  border-bottom: 0.5px solid #a8b2c347;
+}
+
+.navbar__item:last-child {
+  padding: 1rem 0 2rem 0;
 }
 
 .icons {
@@ -608,6 +674,12 @@ from 768px up to 1119px
     position: relative;
   }
 
+  .navbar--mobile {
+    top: 2rem;
+    left: 2rem;
+    max-width: 30%;
+  }
+
   .logo {
     margin-left: 6rem;
     font-size: 2rem;
@@ -700,6 +772,22 @@ from 768px up to 1119px
   }
 } */
 
+@media screen and (min-width: 1024px) {
+  .navbar--mobile {
+    display: none;
+  }
+
+  .navbar--large {
+    display: flex;
+    position: relative;
+    top: 3.5rem;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 50%;
+    margin-left: 20%;
+  }
+}
+
 @media screen and (min-width: 1120px) {
   header {
     height: 13rem;
@@ -710,7 +798,11 @@ from 768px up to 1119px
 
   .hero__content {
     font-size: 2.5rem;
-    margin-top: 4rem;
+    margin-top: 6rem;
+  }
+
+  .navbar--large {
+    top: 9.5rem;
   }
 
   .icons {
